--- a/index.html
+++ b/index.html
@@ -606,9 +606,9 @@
 
         <form class="modal-form">
           <div class="form-group">
-            <label for="user-name" class="form-label">Name</label>
+            <label for="user-name" class="form-label">Name <sup class="required-color">*</sup></label>
             <div class="input-wrapper">
-              <input type="text" id="user-name" name="user-name" class="form-input" />
+              <input type="text" id="user-name" name="user-name" class="form-input" required />
               <svg width="18" height="24" class="form-icon">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -616,9 +616,9 @@
           </div>
 
           <div class="form-group">
-            <label for="user-phone" class="form-label">Phone</label>
+            <label for="user-phone" class="form-label">Phone<sup class="required-color">*</sup></label>
             <div class="input-wrapper">
-              <input type="tel" id="user-phone" name="user-phone" class="form-input" />
+              <input type="tel" id="user-phone" name="user-phone" class="form-input" required />
               <svg width="18" height="24" class="form-icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -626,9 +626,9 @@
           </div>
 
           <div class="form-group">
-            <label for="user-email" class="form-label">Email</label>
+            <label for="user-email" class="form-label">Email<sup class="required-color">*</sup></label>
             <div class="input-wrapper">
-              <input type="email" id="user-email" name="user-email" class="form-input" />
+              <input type="email" id="user-email" name="user-email" class="form-input" required />
               <svg width="18" height="24" class="form-icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
