--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <div class="portfolio-list-image-container">
                 <picture>
                   <source
-                    srcset="./images/Portfolio/banking@2x.jpg"
+                    srcset="./images/Portfolio/bankingpc@2x.jpg"
                     media="(min-width: 1158px) and (min-resolution: 192dpi)"
                   />
                   <source srcset="./images/Portfolio/bankingpc.jpg" media="(min-width: 1158px)" />
@@ -470,10 +470,10 @@
                     media="(min-width: 768px) and (max-width: 1157px)"
                   />
                   <source
-                    srcset="./images/Portfolio/illustrationstablet@2x.jpg"
+                    srcset="./images/Portfolio/illustrationsmobile@2x.jpg"
                     media="(max-width: 767px) and (min-resolution: 192dpi)"
                   />
-                  <source srcset="./images/Portfolio/illustrationstablet.jpg.jpg" media="(max-width: 767px)" />
+                  <source srcset="./images/Portfolio/illustrationsmobile.jpg" media="(max-width: 767px)" />
                   <img
                     src="./images/Portfolio/illustrationspc.jpg"
                     alt="screenillustrations"
